[project]
name = "Agentweave"
version = "0.1.0"
description = "AgentWeave An agentic AI platform that weaves memory, tools, RAG, MCP servers, and autonomous research agents into one intelligent system."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "grandalf>=0.8",
    "langchain>=1.3.0",
    "langchain-groq>=1.1.2",
    "langgraph>=1.2.0",
    "pydantic>=2.13.4",
    "pydantic-settings>=2.14.1",
]

[dependency-groups]
dev = [
    "black>=26.3.1",
    "pre-commit>=4.6.0",
    "pylint>=4.0.5",
]

[tool.black]
line-length = 120
target-version = ["py312"]

[tool.pylint.format]
max-line-length = 120

[tool.pylint.messages_control]
disable = [
]

[tool.pytest.ini_options]
testpaths = ["tests"]